[gd_scene load_steps=2 format=3 uid="uid://r84yras4iavx"]

[ext_resource type="Script" uid="uid://v7rvvhyj0ipg" path="res://scripts/GameOver.gd" id="1_game_over"]

[node name="GameOver" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_game_over")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.9)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverTitle" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LevelLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Nível Alcançado: 1"
horizontal_alignment = 1

[node name="WaveLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Wave Alcançada: 1"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Jogar Novamente"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sair"

[connection signal="pressed" from="Panel/VBoxContainer/ButtonContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonContainer/QuitButton" to="." method="_on_quit_button_pressed"]
